// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots stories/components/Charts/LineGraph Default 1`] = `<div />`;

exports[`Storyshots stories/components/CheckBoxes/CheckBox Default 1`] = `
<div
  className="container"
>
  <input
    id="北海道"
    name="北海道"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <label
    className="label"
    htmlFor="北海道"
  >
    北海道
  </label>
</div>
`;

exports[`Storyshots stories/components/CheckBoxes/CheckBoxList Default 1`] = `
<div
  className="list"
>
  <div
    className="container"
  >
    <input
      id="北海道"
      name="北海道"
      onChange={[Function]}
      type="checkbox"
      value={1}
    />
    <label
      className="label"
      htmlFor="北海道"
    >
      北海道
    </label>
  </div>
  <div
    className="container"
  >
    <input
      id="青森県"
      name="青森県"
      onChange={[Function]}
      type="checkbox"
      value={2}
    />
    <label
      className="label"
      htmlFor="青森県"
    >
      青森県
    </label>
  </div>
  <div
    className="container"
  >
    <input
      id="岩手県"
      name="岩手県"
      onChange={[Function]}
      type="checkbox"
      value={3}
    />
    <label
      className="label"
      htmlFor="岩手県"
    >
      岩手県
    </label>
  </div>
  <div
    className="container"
  >
    <input
      id="宮城県"
      name="宮城県"
      onChange={[Function]}
      type="checkbox"
      value={4}
    />
    <label
      className="label"
      htmlFor="宮城県"
    >
      宮城県
    </label>
  </div>
  <div
    className="container"
  >
    <input
      id="秋田県"
      name="秋田県"
      onChange={[Function]}
      type="checkbox"
      value={5}
    />
    <label
      className="label"
      htmlFor="秋田県"
    >
      秋田県
    </label>
  </div>
  <div
    className="container"
  >
    <input
      id="山形県"
      name="山形県"
      onChange={[Function]}
      type="checkbox"
      value={6}
    />
    <label
      className="label"
      htmlFor="山形県"
    >
      山形県
    </label>
  </div>
  <div
    className="container"
  >
    <input
      id="福島県"
      name="福島県"
      onChange={[Function]}
      type="checkbox"
      value={7}
    />
    <label
      className="label"
      htmlFor="福島県"
    >
      福島県
    </label>
  </div>
  <div
    className="container"
  >
    <input
      id="茨城県"
      name="茨城県"
      onChange={[Function]}
      type="checkbox"
      value={8}
    />
    <label
      className="label"
      htmlFor="茨城県"
    >
      茨城県
    </label>
  </div>
</div>
`;

exports[`Storyshots stories/components/Headers/Header Default 1`] = `
<header
  className="header"
>
  <h1
    className="title"
  >
    都道府県別総人口推移
  </h1>
</header>
`;

exports[`Storyshots stories/components/Loadings/Loading Default 1`] = `
<div
  className="container"
>
  <div
    className="loading"
  />
</div>
`;
